--- a/themes/hugo-xmin/static/cv/short.Rmd
+++ b/themes/hugo-xmin/static/cv/short.Rmd
@@ -24,7 +24,8 @@ Team Leader, R&I Team </br>
 
 *NCSOFT*, Team Leader (Seongnam Gyeonggi $\cdot$ South Korea) 2014--present 
 
-*KISDI*, Senior Researcher (Jinchun Chungchungbuk $\cdot$ South Korea) 2013--2014 
+*KISDI* \*, Senior Researcher (Jinchun Chungchungbuk $\cdot$ South Korea) 2013--2014 <br />
+*Korea Information Society Development Institute
 
 *FourThirtyThree*, Data Anlysist (Seoul $\cdot$ South Korea) 2012--2013
 
