--- a/content/note/2017-11-16-myfont.Rmd
+++ b/content/note/2017-11-16-myfont.Rmd
@@ -128,11 +128,11 @@ ggsave("YOUR_FILENAME.pdf", p, width = 7, height = 4)
 ggsave("YOUR_FILENAME.png", p, width = 7, height = 4, dpi = 96)
 ```
 
-# Font embedding 
+# Another digression: Font embedding 
 
 이건 문제가 될 수도 있고 아닐 수도 있다. 하지만 문제가 될 것 같으면 확실히 해두면 되겠다. 
 
-```{r message=FALSE, warning=FALSE}
+```{r message=FALSE, warning=FALSE, fig.showtext=TRUE}
 # install.packages('Cairo')
 library(Cairo) 
 
@@ -145,13 +145,15 @@ q <- ggplot(mtcars, aes(x=wt, y=mpg)) + geom_point() +
         axis.title=element_text(family="notosanskr", size = 8),
         strip.text=element_text(family="notosanskr", size = 8))
 
-print(q); 
+print(q);
 ```
 
 ```{r eval=FALSE}
-ggsave(p, filename="./blah.pdf", 
-       width=5, height=3.5, units="in", device=cairo_pdf)
+ggsave(p, filename="./foo.pdf", device=cairo_pdf)
 ```
+
+위 처럼 명시적으로 device를 지정해주면 `foo.pdf` 문서에 font가 확실하게 문서에 임베딩된다. 
+
 ---
 REFERENCE 
 https://cran.rstudio.com/web/packages/showtext/vignettes/introduction.html
