--- a/content/note/2017-11-16-myfont.Rmd
+++ b/content/note/2017-11-16-myfont.Rmd
@@ -74,13 +74,14 @@ text(2, 70, "N = 1000", family = "bell", cex = 2.5)
 앞서도 이야기 했지만 Google fonts에는 안타깝게도 한글이 없다. early access에는 10종 정도가 포함되어 있지만 정식 리포지터리에는 없으므로 `font_add_google()`로는 한글을 구현할 수 없다. 이 경우 적절한 위치에 폰트 원본 파일을 놓고 이를 불러오면 된다. 
 
 ```{R message=FALSE, warning=FALSE, fig.showtext=TRUE}
-font_add(family = "hwhitecat", regular = "fonts/HoonWhitecatR.ttf")
+font_add(family = "hwhitecat", regular = "./fonts/HoonWhitecatR.ttf")
 ```
 
-위의 코드는 현재 디렉토리의 하위에 위치한 `fonts/HoonWhitecatR.ttf` 폰트를 "hwitecat"이라는 패밀리의 레귤러로 심어준다. 레귤러, 이탤릭, 볼드 등을 따로 따로 지정할 수도 있다. 
+위의 코드는 현재 디렉토리의 하위에 위치한 `./fonts/HoonWhitecatR.ttf` 폰트를 "hwitecat"이라는 패밀리의 레귤러로 심어준다. 레귤러, 이탤릭, 볼드 등을 아래 명령과 같이 별도로 지정할 수도 있다. 
 
 ```{R message=FALSE, warning=FALSE, fig.showtext=TRUE}
-font_add("constan", regular = "fonts/constan.ttf", italic = "fonts/constani.ttf")
+font_add("constan", regular = "./fonts/constan.ttf", italic = "./fonts/constani.ttf")
+font_add("heiti", regular = "./fonts/simhei.ttf")
 ```
 
 ```{R message=FALSE, warning=FALSE, fig.showtext=TRUE}
@@ -159,7 +160,7 @@ ggsave(filename="./foo.pdf", q, device=cairo_pdf)
 #
 ```
 
-위 처럼 명시적으로 device를 `cairo_pdf`로 지정해주면 `foo.pdf` 문서에 로딩한 폰트가 확실하게 포함된다. [여기서](http://lostineconomics.netlify.com/note/download/foo.pdf/download/foo.pdf) 확인해보시라. 
+위 처럼 명시적으로 device를 `cairo_pdf`로 지정해주면 `foo.pdf` 문서에 로딩한 폰트가 확실하게 포함된다. [여기서](http://lostineconomics.netlify.com/note/download/foo.pdf/) 확인해보시라. 
 
 <!--- 
 REFERENCE 
