CREATE_files: GPS_AA_eda.Rmd

--- a/content/post/2017-12-13-GPS_AA_eda.Rmd
+++ b/content/post/2017-12-13-GPS_AA_eda.Rmd
@@ -54,7 +54,7 @@ res3 %>%
 
 
 넷마블게임즈의 장기 흥행작인  "모두의마블", "세븐나이츠", 그리고 모바일 MMORPG 히트작 "리니지2레볼루션", "리니지M", 그리고 최근에 등장한 신작인 "액스(AxE)", "오버히트", "테라M" 모두 7개다. "오버히트"와 "테라M"은 관찰 수가 부족하여 분석에서 거의 제외될 것이다. 
-데이터의 출처는 업계에서 많이 찹고하는 ㅇㅇㄴ이다.[^aan] 보통 분석 내용과 함께 원데이터 및 데이터 가공과 분석에 활용된 소스코드를 공개하는 것이 원칙이다. 아쉽게도 이용한 원자료를 공개할 권리가 나에게 없다. 이 점 양해 부탁한다. 요청이 있다면 데이터 정리 및 분석에 동원된 코드는 공개할 수 있다. 
+데이터의 출처는 업계에서 많이 참고하는 ㅇㅇㄴ이다.[^aan] 보통 분석 내용과 함께 원데이터 및 데이터 가공과 분석에 활용된 소스코드를 공개하는 것이 원칙이다. 아쉽게도 이용한 원자료를 공개할 권리가 나에게 없다. 이 점 양해 부탁한다. 요청이 있다면 데이터 정리 및 분석에 동원된 코드는 공개할 수 있다. 
 
 [^aan]: ㅇㅇㄴ 서비스에 대해서 여러가지 불만이 있는 것으로 안다. 가장 많이 들을 수 있는 불만은 '데이터의 정확도'에 관한 내용이다. 이에 대해서 몇 가지 '변명'을 언급해두도록 하자. 우선, ㅇㅇㄴ데이터는 마켓 수수료 30%가 빠진 자료다. 따라서 값을 0.7로 나누어야 통상적으로 익숙한 매출액이 나온다. 둘째, ㅇㅇㄴ자료는 패널을 통한 데이터 샘플링과 자체적인 데이터 가공을 거쳐 발표된다. 회사별로 정확하게 볼 수 있는 데이터에 비해서는 정확도가 떨어질 수 밖에 없다. 하지만 (많은 경우에 그렇듯이) 없는 것보다는 낫지 않은가? 셋째, 데이터 자체의 정확성과는 별도로 추세는 비교적 맞아 떨어진다. 즉, 레퍼런스 포인트가 다를 뿐 어느 방향으로 움직이는지는 상당히 정확하게 반영되어 있다고 보면 된다. 
 
