--- a/content/post/2017-12-13-GPS_AA_eda.Rmd
+++ b/content/post/2017-12-13-GPS_AA_eda.Rmd
@@ -73,10 +73,10 @@ res1 %.>% kable(.,
                 col.names=c('게임', 'GPS 매출비', 'GPS 다운로드비'))
 ```
 
-"오버히트"와 "테라M"의 비율이 낮은 것은 자료의 정확성이 떨어지기 때문이다. 데이터가 좀 더 보이고 보정이 이루어지면 다른 게임과 비슷한 수준으로 올라올 것으로 추측해본다. 일단 매출 비중의 경우 대체로 85%에 가까운 매출이 GPS를 통해 발생하고 있다. 일자별로는 어떤 패턴을 보일까? "오버히트"와 "테라M"을 제외하고 그려보면 다음과 같다. 
+"오버히트"와 "테라M"의 비율이 낮은 것은 자료의 정확성이 떨어지기 때문이다. 데이터가 좀 더 모이고 적절한 보정이 이루어지면 다른 게임과 비슷한 수준으로 올라올 것으로 추측해본다. 일단 매출 비중의 경우 대체로 85%에 가까운 매출이 GPS를 통해 발생하고 있다. 일자별로는 어떤 패턴을 보일까? "오버히트"와 "테라M"을 제외하고 그려보면 다음과 같다. 
 
 
-```{r message=FALSE, warning=FALSE, echo=FALSE, fig.showtext=T, fig.show='asis', fig.retina=1}
+```{r message=FALSE, warning=FALSE, echo=FALSE, fig.showtext=T, fig.show='asis', fig.retina=1, fig.align='center'}
 wear_customtheme(mygg1, "rmd") 
 ```
 
@@ -86,20 +86,20 @@ wear_customtheme(mygg1, "rmd")
 
 보통 언론이나 대중의 인식에서는 마켓 1위 게임들에 관심이 쏠리기 마련이다. "$x$가 $y$를 누르고 1위를 차지했다"더라 이런 기사 제목을 떠올리면 되겠다. 이런 통념은 게임 사이에 '경합관계'가 있음을 암묵적으로 가정한다. "리니지M"이 "리니지2레볼루션"을 매출에서 앞질렀다고 하자. 이때 우리는 "리니지2레볼루션"의 매출과 "리니지M" 매출 사이 음의 상관관계를 볼 수 있을까? PerformanceAnalytics 패키지에서 제공하는 `chart.Coreelation` 명령을 통해 탐색적인 수준에서 이 문제를 살펴보자. 데이터가 충분하지 않은 "액스", "오버히트", "테라M"을 제외한 결과는 다음과 같다. 
 
-```{r message=FALSE, warning=FALSE, echo=FALSE, fig.showtext=T, fig.show='asis', fig.retina=1}
+```{r message=FALSE, warning=FALSE, echo=FALSE, fig.showtext=T, fig.show='asis', fig.retina=1, fig.align='center'}
 options(warn=-1)
 showtext_auto()
   tdf0 %.>% 
     chart.Correlation(., histogram = TRUE, pch = 19) 
 ```
 
-결과에서 보듯이 상관관계로 확인 가능한 '경합관계'를 드러내는 게임 쌍은 없다. 오히려 양의 상관관계가 보다 두드러진다. 즉 게임 이용자는 대체로 남들이 '지르는' 시기에 함께 지른다. 물론 상관계수로 할 수 있는 이야기는 몹시 제한적이다. 다만 매출 추이로 명백히 확인할 수 있는 경합관계는 관찰할 수 없다는 것이다. 
+결과에서 보듯이 상관관계로 확인 가능한 '경합관계'를 드러내는 게임 쌍은 없다. 오히려 양의 상관관계가 보다 두드러진다. 즉 게임 이용자는 대체로 남들이 '지르는' 시기에 함께 지른다. 물론 상관관계로 할 수 있는 이야기는 몹시 제한적이다. 다만 매출 추이로 명백히 확인할 수 있는 경합관계는 관찰할 수 없다는 것이다. 
 
 앞서의 상관관계는 전체기간에 대해서 계산했다. 데이터가 일 단위로 생성된다는 측면을 고려하면, 상관관계 역시 시간이 흐르면서 함께 변할 수 있다. 이 점을 보기 위해 이동 상관관계(rolling correlation)를 보도록 하자. 이동 상관관계란 기간을 고정하고 날짜를 하나씩 밀어내면서 일련의 상관관계를 계산하는 방법을 말한다. 이동평균(moving average)을 떠올리면 좋다. 
 
 넷마블의 "모두의 마블", "세븐나이츠", 그리고 엔씨소프트의 "리니지M"에 대해 이동 상관계수를 계산한 결과는 다음의 그림과 같다. "리니지2레볼루션"에 대한 데이터가 안정화된 2017년 1월 1일부터 2017년 12월 4일까지를 계산 기간으로 삼았고, 게임의 매출이 주를 기준으로 많이 움직이는 점을 고려하여 28일을 상관관계의 주기로 두었다. 
 
-```{r message=FALSE, warning=FALSE, echo=FALSE, fig.showtext=T, fig.show='asis', fig.retina=1}
+```{r message=FALSE, warning=FALSE, echo=FALSE, fig.showtext=T, fig.show='asis', fig.retina=1, fig.align='center'}
 res2_plot1 %.>% wear_customtheme(., "rmd")
 ```
 
@@ -132,7 +132,7 @@ sjt.lm(vdf1[[1]], vdf1[[2]], vdf1[[3]], vdf1[[4]],
 
 머리 속에 떠오르는 대로 4개의 회귀분석을 돌려보았다. 자세한 해설은 생략하도록 한다! $\textrm{R}^2$ 값이 높은 3, 4열의 결과에 따르면, 1%의 GPS 비율 증가에 대해 낮게는 0.6%에서 높게는 1.3% 매출 증가를 기대할 수 있다. 물론 더 자세한 것은 regression diagnotics 등을 거쳐 꼼꼼하게 따져봐야 할 일이다. 설명 변수들 사이의 다중공선성은 크게 걱정할 필요는 없을 듯 하다. 다만, `GPS매출비율`과 `log(다운로드)` 사이는 살짝 의심스러워서 둘의 관계를 쓱 그려보았다. 
 
-```{r message=FALSE, warning=FALSE, echo=FALSE, fig.showtext=T, fig.show='asis', fig.retina=1}
+```{r message=FALSE, warning=FALSE, echo=FALSE, fig.showtext=T, fig.show='asis', fig.retina=1, fig.align='center'}
 mygg2 %.>% wear_customtheme(., "rmd") + facet_wrap(~game_factor, scale='free_x')
 ```
 
