MOD_files: clustering-top-economist.rmd

--- a/content/post/2017-12-17-clustering_igm.Rmd
+++ b/content/post/2017-12-17-clustering_igm.Rmd
@@ -130,11 +130,11 @@ fviz_cluster(list(data = tdf, cluster = sub_diana),
 diana %.>% my_dendplot(., 3)
 ```
 
-익숙한 이름들이 등장하니 보는 맛이 조금은 있다. 모든 클러스터링은 나뉘어진 후 그에 대해서 이야기를 붙여줘야 의미가 살아난다. 이렇게 세 가지로 분류된 경제학자들은 무엇이 어떻게 얼마나 다를까? 앞서 분석한 agglomerative와 divisive 중 다소 군집도가 높았던 agglomerative의 의한 분류로 간단히 더 살펴보도록 하자. 
+익숙한 이름들이 등장하니 보는 맛이 조금은 있다. 모든 클러스터링은 나뉘어진 후 그에 대해서 이야기를 붙여줘야 의미가 살아난다. 이렇게 세 가지로 분류된 경제학자들은 무엇이 어떻게 얼마나 다를까? 앞에서 agglomerative와 divisive 중에서 군집도 계수가 높았던 agglomerative를 통한 결과로 몇가지 더 살펴보도록 하자. 
 
 # How different are economist? 
 
-클러스터링 결과를 이야기로 꾸미기 위해서 HC의 결과로 얻은 각 집단에 대해서 각 설문별로 중위값을 취해 그룹의 '대표 견해'라고 부르겠다. 그룹 사이에 대표 견해에 큰 차이가 있을까? 다음에 제시될 결과에서 보듯이, 미국의 저명 경제학자들은 차이보다는 의견 일치를 보는 경향이 강했다. 이에 대한 해석은 알아서 각자 하시면 되겠다. 다소 의견 대립이 있지 않을까, 이왕이면 '좌우'로 나눠서 싸워주면 좋지 않을까 했던 개인적인 바람은 저 멀리... 
+클러스터링 결과를 이야기로 꾸미기 위해서 HC의 결과로 얻은 각 집단에 대해서 각 설문별로 집단의 중간값을 취해 그룹의 '대표 견해'라고 부르겠다. 그룹 사이에 대표 견해에 큰 차이가 있을까? 다음에 제시될 결과에서 보듯이, 미국의 저명 경제학자들은 차이보다는 의견 일치를 보는 경향이 강했다. 이에 대한 해석은 알아서 각자 하시면 되겠다. 다소 의견 대립이 있지 않을까, 이왕이면 '좌우'로 나눠서 싸워주면 좋지 않을까 했던 개인적인 바람은 저 멀리... 
 
 앞서 agglomerative에서 세개의 집단으로 나눈 경제학들의 특성 정도는 볼 수 있겠다. 아래는 집단을 나눈 것이고 ( )안에 든 색은 앞서 본 dendrogram의 색깔을 나타낸다. 
 
