--- a/content/post/2017-12-17-clustering_igm.Rmd
+++ b/content/post/2017-12-17-clustering_igm.Rmd
@@ -134,7 +134,7 @@ diana %.>% my_dendplot(., 3)
 
 # How different are economist? 
 
-클러스터링 결과를 이야기로 꾸미기 위해서 HC의 결과로 얻은 각 집단에 대해서 각 설문별로 집단의 중간값을 취해 그룹의 '대표 견해'라고 부르겠다. 그룹 사이에 대표 견해에 큰 차이가 있을까? 다음에 제시될 결과에서 보듯이, 미국의 저명 경제학자들은 차이보다는 의견 일치를 보는 경향이 강했다. 이에 대한 해석은 알아서 각자 하시면 되겠다. 다소 의견 대립이 있지 않을까, 이왕이면 '좌우'로 나눠서 싸워주면 좋지 않을까 했던 개인적인 바람은 저 멀리... 
+클러스터링 결과를 이야기로 꾸며보자. 각 설문별로 HC에 따른 집단의 중간값을 취해 이를 설문의 그룹별 '대표 견해'라고 부르겠다. 그룹 사이에 대표 견해에 큰 차이가 있을까? 다음에 제시될 결과에서 보듯이, 미국의 저명 경제학자들은 차이보다는 의견 일치를 보는 경향이 강했다. 이에 대한 해석은 알아서 각자 하시면 되겠다. 다소 의견 대립이 있지 않을까, 이왕이면 '좌우'로 나눠서 싸워주면 좋지 않을까 했던 개인적인 바람은 저 멀리... 
 
 앞서 agglomerative에서 세개의 집단으로 나눈 경제학들의 특성 정도는 볼 수 있겠다. 아래는 집단을 나눈 것이고 ( )안에 든 색은 앞서 본 dendrogram의 색깔을 나타낸다. 
 
