MOD_files: clustering-top-economist.rmd

--- a/content/post/2017-12-17-clustering_igm.Rmd
+++ b/content/post/2017-12-17-clustering_igm.Rmd
@@ -66,12 +66,12 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 클러스터링(clustering)은 관찰이 지닌 속성(변수)을 비교해 비슷한 무리를 묶는 통계적 기법이다.[^clustering1] 이때 비슷한 무리를 묶기 위해 필요한 것은 '거리 개념'이다. 거리가 나오려면 양적 변수여야 한다는 건 당연한 이치다. 이에 기반한 표준적인 클러스터링 방법은 뭔가 중심을 찾고 이를 중심으로 비슷한 녀석들을 묶는 [k-means](https://en.wikipedia.org/wiki/K-means_clustering) 알고리즘이다. 
 
-[^clustering]: 보통 '군집화'로 번역하지만 내 맘대로 클러스터링으로 쓰도록 하겠다. 
+[^clustering1]: 보통 '군집화'로 번역하지만 내 맘대로 클러스터링으로 쓰도록 하겠다. 
 
-그런데 IGM 패널 자료는 양적 자료가 아니다. 클러스터링을 위해 거리 개념이 자의적으로 들어가는 건 어쩔 수 없다 치자. kmeans의 중심 개념은 자의성을 확대한다. 그렇다면 다음으로 생각해 볼 수 있는 방법이 계층 클러스터링(hierarchical clustering, 이하 HC)이다. 위계적이라는 단어가 그대로 시사하듯이 이는 어떤 기초적인 상태에서 출발해서 거슬러 올라가는 혹은 내려가는 클러스터링이다. 전체 하나가 전부 다르다고 가정한 후 비슷한 관찰을 묶는 방법(agglomerative, bottom-up) 혹은 전체가 전부 하나의 군집이라고 가정한 후 가지를 쳐 나가는 방법(divisive, top-down), 두 가지가 있다.^[HC] 역시 거리 개념에 기반하고 있지만, 계층적 방법을 쓰기 때문에, 종종 범주형 자료를 클러스터링하는 데 활용되곤 한다.^[clustering2]    
+그런데 IGM 패널 자료는 양적 자료가 아니다. 클러스터링을 위해 거리 개념이 자의적으로 들어가는 건 어쩔 수 없다 치자. kmeans의 중심 개념은 자의성을 확대한다. 그렇다면 다음으로 생각해 볼 수 있는 방법이 계층 클러스터링(hierarchical clustering, 이하 HC)이다. 위계적이라는 단어가 그대로 시사하듯이 이는 어떤 기초적인 상태에서 출발해서 거슬러 올라가는 혹은 내려가는 클러스터링이다. 전체 하나가 전부 다르다고 가정한 후 비슷한 관찰을 묶는 방법(agglomerative, bottom-up) 혹은 전체가 전부 하나의 군집이라고 가정한 후 가지를 쳐 나가는 방법(divisive, top-down), 두 가지가 있다.[^HC] 역시 거리 개념에 기반하고 있지만, 계층적 방법을 쓰기 때문에, 종종 범주형 자료를 클러스터링하는 데 활용되곤 한다.[^clustering2]    
 
 [^HC]: 자세한 내용은 [이곳](https://en.wikipedia.org/wiki/Hierarchical_clustering)을 참고하라. 
-[^clustering]: 이외에도 스피어만 코릴레이션 처럼 다름 자체를 측정해서 k-means의 방법을 수정한 k-modes 알고리즘 혹은 latent vairable model을 얼른 고려해볼 수 있겠다. 뭐 귀찮아서 일단 용서하시고 넘어가시라! 사실 k-modes는 divisive와 거의 동일한 결과를 내주었고, latent variable model은 좀 껄쩍지근 부분이 있어서 더 고민이 필요하다. 
+[^clustering2]: 이외에도 스피어만 코릴레이션 처럼 다름 자체를 측정해서 k-means의 방법을 수정한 k-modes 알고리즘 혹은 latent vairable model을 얼른 고려해볼 수 있겠다. 뭐 귀찮아서 일단 용서하시고 넘어가시라! 사실 k-modes는 divisive와 거의 동일한 결과를 내주었고, latent variable model은 좀 껄쩍지근 부분이 있어서 더 고민이 필요하다. 
 
 그래서 IGM 패널의 클러스터링에는 HC쓰도록 하겠다. 찝찝한 부분이 없지는 않지만, 언제나 그렇듯이 안해보는 것보다는 낫지 않겠는가? 야매는 오용을 두려워하지 않고 일단 해보는 삽질을 마다하지 않는다. 
 
