MOD_files: clustering-top-economist.rmd

--- a/content/post/2017-12-17-clustering_igm.Rmd
+++ b/content/post/2017-12-17-clustering_igm.Rmd
@@ -31,12 +31,12 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 # tl; dr 
 
-  1. IGM 패널의 미국 경제학자들의 견해를 긁어보니 경제학자들은 거의 모든 사안에 대해서 꽤 일치된 견해를 갖고 있더라.(물론, 해석은 각자의 마음 속에...)
+  1. IGM 패널의 미국 경제학자들의 견해를 긁어보니 경제학자들은 거의 모든 사안에 대해서 꽤 일치된 견해를 갖고 있더라.(물론, 이에 관한 해석은 각자의 마음 속에...)
   2. 분석에 활용된 과정과 분석 결과는 다음의 각각 링크에서 Download! 아니면 여기서 [github](https://github.com/anarinsk/analysis_IGM)
   
-    a. [Web scraping](https://github.com/anarinsk/analysis_IGM/blob/master/code_sraping.r)
+    a. [Scraping web](https://github.com/anarinsk/analysis_IGM/blob/master/code_sraping.r)
     b. [Munging data](https://github.com/anarinsk/analysis_IGM/blob/master/code_munging.r)
-    c. [Analysis](https://github.com/anarinsk/analysis_IGM/blob/master/code_modelling.r)
+    c. [Analyzing data](https://github.com/anarinsk/analysis_IGM/blob/master/code_modelling.r)
     d. [source data by csv](https://github.com/anarinsk/analysis_IGM/tree/master/csv)
 
 # Motivation 
@@ -169,8 +169,7 @@ count_group_dff() %.>% kable(., col.names=c('집단간 차이', '1그룹 -- 2그
 또 다른 관심사는 경제학자들 사이에 분명하게 대립되는 견해가 존재하는지 여부다. 즉, 어떤 집단은 대표견해로 "Agree" 방향을 냈는데, 다른 집단이 "Diagree" 방향을 낸 경우가 있는지, 즉 집단 간의 견해가 "Uncertain"을 넘어간 경우가 있는지도 확인해보았다. 한 건도 없었다! 미국의 저명 경제학자들이 비슷하게 생각하는 경향에 관해서는 두 가지 정도로 언급해두겠다. 
 
   1. 경제학은 "It depends on"의 학문이다. 경제학이 항상 덧붙이는 "Ceteribus Paribus"를 고려할 때 많은 항목에서 강한 의견보다는 "Uncertain"이 많은 건 당연한 결과일지 모르겠다. 
-  2. 그럼에도 거의 모든 견해에서 방향성이 같다는 건 뭐 그 나물의 그 밥 혹은 제국주의 경제학의 한계일까? 나는 모르겠지만... 
-
+  2. 그럼에도 거의 모든 견해에서 방향성이 같다는 것은? 경제학자들이 서로 공유하는 '합리성'이 있다는 의미일까 아니면 그 나물의 그 밥 혹은 '제국주의' 경제학의 한계일까? 나는 모르겠다만... 
 
 앞서 언급한 비교적 견해차이가 컸던 토픽과 질문들은 아래와 같다. 
 
