MOD_files: clustering-top-economist.rmd

--- a/content/post/2017-12-17-clustering_igm.Rmd
+++ b/content/post/2017-12-17-clustering_igm.Rmd
@@ -63,7 +63,7 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 이런 방식으로 IGM 사이트를 크게 두 부류로 각각 긁어냈다. 하나는 미국 경제학자들에게 질문을 던진 토픽이고, 다른 하나는 그 토픽에 대한 경제학자들의 답변 내용이다. 토픽은 2017년 12월 17일 현재 전부 158개, 패널은 51명의 저명한 경제학자들로 구성되어 있다. 데이터 구조는 복잡하지 않아서 스크래핑은 금방 끝났다.[^scraping] 158개 중 2008년 금융위기에 관한 질문은 나머지와 다른 구조를 갖고 있어 일단 제외했다. 최종적으로 분석에 활용된 토픽은 157개다. 
 
-[^scraping: 하지만 중간에 답변 내용이 바뀌거나 사이트 css가 바뀐 부분이 있어서 약간의 삽질은 불가피했다. 하지만 삽질로 해결할 수 있는 문제라면 언제나 환영이다!]
+[^scraping]: 하지만 중간에 답변 내용이 바뀌거나 사이트 css가 바뀐 부분이 있어서 약간의 삽질은 불가피했다. 하지만 삽질로 해결할 수 있는 문제라면 언제나 환영이다!
 
 # How to group economists 
 
