--- a/content/post/2017-12-17-clustering_igm.Rmd
+++ b/content/post/2017-12-17-clustering_igm.Rmd
@@ -31,7 +31,7 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 # tl; dr 
 
-  1. IGM 패널에 속한 미국 경제학자들의 경제에 관한 의견들을 긁어보니 경제학자들은 거의 모든 사안에 대해서 꽤 일치된 견해를 갖고 있더라.(물론, 이에 관한 해석은 각자의 마음 속에...)
+  1. IGM 패널 소속의 미국 경제학자들이 지닌 경제관을 긁어보니, 이들은 거의 모든 사안에 대해서 꽤 일치된 견해를 갖고 있더라. (물론, 이에 관한 해석은 각자의 마음 속에...)
   2. 분석에 활용된 과정과 분석 결과는 다음의 각각 링크에서 Download! 아니면 여기서 [github](https://github.com/anarinsk/analysis_IGM)
   
     a. [Scraping web](https://github.com/anarinsk/analysis_IGM/blob/master/code_sraping.r)
@@ -41,19 +41,19 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 # Motivation 
 
-집에 심심하게 있다가 '갑자기'(out of nowhere!) 이런 생각이 떠올랐다. '믿을만한'(이라고 쓰고 '저명한'이라고 읽자) 경제학자들은 얼마나 의견에 합의를 볼 수 있을까? 공상이 흘러 흘러 , '데이터는 어디서 구하지'라고 생각이 흘렀고, 당장 시카고 Booth의 [IGM 패널](http://www.igmchicago.org/)이 떠올랐다. 급히 스마트폰으로 IGM이 그간 몇 개의 토픽을 다뤘는지 찾아보니 사례는 충분했다. 이제 기술적인 문제다. 웹 자료니까 긁어야하는데 웹스크래핑을 해본지 꽤 되었다. Python에서만 해봤는데, 이 기회에 R로도 해보면 재미있겠지? 마지막으로 자료의 성격이 문제다. 답변은 전형적인 리커드 척도(Likert scale), 즉 5점 척도다. 흠, 얘네들을 클러스터링 하려면 어떻게 해야 하나? 일단, 양적 자료는 아니니 k-means 같은 표준적이고 손쉬운 방법은 못 쓴다. 설상가상 리커트 척도를 다루는 데는 문외한이고, 이제부터 공부해서 뭔가 만들어낼 성의도 없다. 딱 주말에 심심풀이로 꺼내든 프로젝트라서 주말에 끝내고 싶다! (역시 나에게는 대충과 야매가 어울린다.) 어쨌든 이후의 글에서는 아래의 세 가지 내용을 간단히 다뤄보고자 한다. 
+집에 심심하게 있다가 '갑자기'(out of nowhere!) 이런 생각이 떠올랐다. '믿을만한'(이라고 쓰고 '저명한'이라고 읽자) 경제학자들은 얼마나 의견에 합의를 볼 수 있을까? 공상이 흘러 흘러 , '데이터는 어디서 구하지'라고 생각이 흘렀고, 당장 시카고 Booth의 [IGM 패널](http://www.igmchicago.org/)이 떠올랐다. 급히 스마트폰으로 IGM이 그간 몇 개의 토픽을 다뤘는지 찾아보니 사례는 충분했다. 이제 기술적인 문제다. 웹 자료니까 긁어야하는데 웹스크래핑을 해본지 꽤 되었다. Python에서만 해봤는데, 이 기회에 R로도 해보면 재미있겠지? 마지막으로 자료의 성격이 문제다. 답변은 전형적인 리커드 척도(Likert scale), 즉 5점 척도다. 흠, 얘네들을 클러스터링 하려면 어떻게 해야 하나? 일단, 양적 자료는 아니니 k-means 같은 표준적이고 손쉬운 방법은 못 쓴다. 설상가상 리커트 척도를 다루는 데는 문외한이고, 이제부터 공부해서 뭔가 만들어낼 성의도 없다. 딱 주말에 심심풀이로 꺼내든 프로젝트라서 주말에 끝내고 싶다! (역시 나에게는 대충과 야매가 어울리지.) 어쨌든 이후의 글에서는 아래의 세 가지 내용을 간단히 다뤄보고자 한다. 
 
   1. IGM 패널 웹 사이트를 긁기 
-  2. 자료 정리(munging) 및 클러스터링 앍고리듬 적용하기 
-  3. 결과에 대한 내 맘대로 해석, 해결 혹은 헛소리 
+  2. 자료 정리(munging) 및 클러스터링 알고리듬 적용하기 
+  3. 결과에 대한 내 맘대로 해석 혹은 헛소리 
 
 # How to scrap results of IGM panel  
 
-웹을 스크래핑 하는 데에는 몇 가지 방법이 있지만 기술적인 내용을 제외하고 실용적으로 보자면 '코드'로 하느냐 아니면 '수작업'으로 하느냐 둘 중 하나다. 후자는 다시 '정말' 손으로 하는지 아니면 '손'을 흉내내는지로 다시 나눌 수 있겠다. 코드로 하는게 가장 좋겠지만 이건 진입장벽이 있고, js로 된 사이트들은 더 많은 고민과 꼼수가 필요하다. 경우에 따라서는 후자가 빠를 수도 있으니 굳이 노가다하는 걸 망설일 필요는 없겠다. (당신에게 충분한 성의만 있다면) 노가다는 언제나 진리다.[^macro] 
+웹을 스크래핑 하는 데에는 몇 가지 방법이 있지만 기술적인 내용을 제외하고 실용적으로 보자면 '코드'로 하느냐 아니면 '수작업'으로 하느냐 둘 중 하나다. 후자는 다시 '정말' 손으로 하는지 아니면 손을 '흉내'내는지로 다시 나눌 수 있겠다. 코드로 하는게 가장 좋겠지만 이건 진입장벽이 있고, js로 된 사이트들은 더 많은 고민과 꼼수가 필요하다. 경우에 따라서는 후자가 빠를 수도 있으니 굳이 노가다하는 걸 망설일 필요는 없겠다. (당신에게 충분한 성의만 있다면) 노가다는 언제나 진리다.[^macro] 
 
 [^macro]: 시중에서 흔히 볼 수 있는 매크로 프로그램들을 잘 쓰면 생각보다 쉽게 데이터를 얻을 수 있다. 실제로 스크래핑을 막아둔 곳들도 이런 방법으로 자료를 수집할 수 있다.  
 
-어쨌든 웹 스크래핑은 그간 파이썬에 장점이 있었지만, RStudio에서 내놓은 rvest 패키지 떄문에 이런 격차를 순식간에 사라지게 된 것 같다. 웹사이트를 html로 저장한 뒤 node를 따는 방식으로 원하는 자료들을 쉽게 긁을 수 있다.[^RStudio] 다만, 이 경우 웹사이트를 뭔가 숨겨놓지 않아야 하는데 IGM의 경우에는 구조를 그대로 볼 수 있게 되어 있다. 좌간, 아래 두 개의 튜토리얼을 참고하면 누구나 쉽게 웹 사이트를 발라낼 수 있다. 참으로 예리한 칼이 아닌가! 
+어쨌든 웹 스크래핑은 그간 대체로 파이썬이 편리했지만, RStudio에서 내놓은 rvest 패키지 떄문에 이런 격차가 순식간에 사라지게 된 듯 싶다. 기본적인 작동 원리는 웹사이트를 html로 저장한 뒤 node를 따는 방식이다.[^RStudio] 다만, 이 경우 웹사이트를 뭔가 숨겨놓지 않아야 하는데 IGM의 경우에는 구조를 그대로 볼 수 있게 되어 있다. 좌간, 아래 두 개의 튜토리얼을 참고하면 누구나 쉽게 웹 사이트를 발라낼 수 있다. 
 
 [^RStudio]: RStudio에서 준비중인 RStudio Cloud에서는 조만간 "Automate Tasks"도 지원할 예정이다. 이렇게 되면, 자신의 local machine을 켜두지 않고서도 거의 실시간 급으로 웹사이트를 긁어 처리하는 것도 손쉽게 할 수 있을 것이다. 
 
@@ -61,7 +61,7 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 [Scrape website data with the new R package rvest](http://zevross.com/blog/2015/05/19/scrape-website-data-with-the-new-r-package-rvest/)
 
-이런 방식으로 IGM 사이트를 크게 두 부류로 각각 긁어냈다. 하나는 미국 경제학자들에게 질문을 던진 토픽이고, 다른 하나는 그 토픽에 대한 경제학자들의 답변 내용이다. 토픽은 2017년 12월 17일 현재 전부 158개, 패널은 51명의 저명한 경제학자들로 구성되어 있다. 데이터 구조는 복잡하지 않아서 스크래핑은 금방 끝났다.[^scraping] 158개 중 2008년 금융위기에 관한 질문은 나머지와 다른 구조를 갖고 있어 일단 제외했다. 최종적으로 분석에 활용된 토픽은 157개다. 
+좌우간 이 방법을 활용해 IGM 사이트를 크게 두 부류로 긁어냈다. 하나는 미국 경제학자들에게 질문을 던진 토픽이고, 다른 하나는 그 토픽에 대한 경제학자들의 답변 내용이다. 토픽은 2017년 12월 17일 현재 전부 158개, 패널은 51명의 저명한 경제학자들로 구성되어 있다. 데이터 구조가 그리 복잡하지 않아서 스크래핑은 금방 끝났다.[^scraping] 158개 중 2008년 금융위기에 관한 질문은 나머지와 다른 구조를 갖고 있어 제외해서, 최종적으로 분석에 활용된 토픽은 157개다. 
 
 [^scraping]: 하지만 중간에 답변 내용이 바뀌거나 사이트 css가 바뀐 부분이 있어서 약간의 삽질은 불가피했다. 하지만 삽질로 해결할 수 있는 문제라면 언제나 환영이다!
 
@@ -80,7 +80,7 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 한가지 남은 문제는 "Do Not Answer", "No Opinion" 그리고 패널 설문에 참여하지 못한 경우를 어떻게 처리할 것인지이다. 이를 별도 카테고리로 둘 것인가? 리커트 척도의 특성상 별도의 범주를 구성하기가 애매하다. 보통 이런 경우 해당 변수의 평균값, 중간값을 넣어주는 경우도 있으나, 이 경우는 "Uncertain"으로 보는 게 비교적 왜곡이 적을 것 같다. 고민하다가 답을 못한 경우라면 머리 속에서 이런 저런 생각이 다 떠올랐기 때문 아닐까? 물론, 잘 몰라서 답을 못한 경우와 구분이 안되긴 한다. IGM 패널에 들어간 분들의 면면을 본다면, "Uncertain" 처리가 그래도 괜찮아 보인다. 
 
-먼저 agglomerative부터 보자. agglomerative의 경우  linkage criteria에 따라서 군집 구조의 강도를 찾아주는 agglomerative coefficient를 구할 수 있다. 다음의 결과처럼 "ward" 방법이 가장 괜찮은 결과를 만들어준다.
+먼저 agglomerative부터 보자. agglomerative의 경우  linkage criteria에 따라서 군집 구조의 강도를 찾아주는 agglomerative coefficient를 구할 수 있다. 다음으로 agglomerative의 경우 일단 군집이 이루어진 이후 이 군집 사이의 거리를 측정하는 방법이 문제다. 대체로 4개의 방법이 많이 활용되고, 다음의 결과처럼 "ward" 방법이 가장 괜찮은 결과를 내준다.
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE}
 # Agglomerative coefficient
