--- a/content/post/2017-12-17-clustering_igm.Rmd
+++ b/content/post/2017-12-17-clustering_igm.Rmd
@@ -189,8 +189,8 @@ make_group_med(TRUE) %.>%
   arrange(., id, question) %.>% 
   left_join(., df_survey, by = c('id')) %.>% 
   rename(., url = list) %.>% 
-  kable(., col.names=c('id', '질문', '그룹1 견해', '그룹2 견해', '그룹3 견해', 
-                       '그룹1--그룹2', '그룹1--그룹3', '그룹2--그룹3', 'URL'))
+  dplyr::select(., one_of('id', 'question', 'clu1', 'clu2', 'clu3', 'url')) %.>% 
+  kable(., col.names=c('id', '질문', '그룹1 견해', '그룹2 견해', '그룹3 견해', 'URL'))
 ````
 
 물론 학자 개개인의 차이는 클러스터링의 결과보다 클 것이고 자세히 들여다볼 만큼 흥미로운 경우가 있을 것이다. 이 글의 목적은 IGM 패널들의  개략적인 모습을 그려보는 데 있다. 그 정도에서 이해주시면 감사하겠다. 어차피 야매 활동일 뿐인 것을... 
