MOD_files: clustering-top-economists

--- a/content/post/2017-12-17-clustering_igm.Rmd
+++ b/content/post/2017-12-17-clustering_igm.Rmd
@@ -41,7 +41,7 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 # Motivation 
 
-집에 심심하게 있다가 '갑자기'(out of nowhere!) 이런 생각이 떠올랐다. '믿을만한'(이라고 쓰고 '저명한'이라고 읽자) 경제학자들은 얼마나 의견에 합의를 볼 수 있을까? 공상이 흘러 흘러 , '데이터는 어디서 구하지'라고 생각이 흘렀고, 당장 시카고 Booth의 [IGM 패널](http://www.igmchicago.org/)이 떠올랐다. 급히 스마트폰으로 IGM이 그간 몇 개의 토픽을 다뤘는지 찾아보니 사례는 충분했다. 이제 기술적인 문제다. 웹 자료니까 긁어야하는데 웹스크래핑을 해본지 꽤 되었다. Python에서만 해봤는데, 이 기회에 R로도 해보면 재미있겠지? 마지막으로 자료의 성격이 문제다. 답변은 전형적인 리커드 척도(Likert scale), 즉 5점 척도다. 흠, 얘네들을 클러스터링 하려면 어떻게 해야 하나? 일단, 양적 자료는 아니니 k-means 같은 표준적이고 손쉬운 방법은 못 쓴다. 설상가상 리커트 척도를 다루는 데는 문외한이고, 이제부터 공부해서 뭔가 만들어낼 성의도 없다. 딱 주말에 심심풀이로 꺼내든 프로젝트라서 주말에 끝내고 싶다! (역시 나에게는 대충과 야매가 어울리지.) 어쨌든 이후의 글에서는 아래의 세 가지 내용을 간단히 다뤄보고자 한다. 
+집에 심심하게 있다가 '갑자기'(out of nowhere!) 이런 생각이 떠올랐다. '믿을만한'(이라고 쓰고 '저명한'이라고 읽자) 경제학자들은 얼마나 의견에 합의를 볼 수 있을까? 공상은 흘러 흘러 '데이터는 어디서 구하지'에 이르렀다. 당장 시카고 Booth의 [IGM 패널](http://www.igmchicago.org/)이 떠오르더라. 얼른 스마트폰으로 IGM이 그간 몇 개의 토픽을 다뤘는지 찾아보니 사례는 충분했다. 이제 기술적인 문제다. 웹 자료니까 긁어야하는데 웹스크래핑을 해본지 꽤 되었다. Python에서만 해봤는데, 이 기회에 R로도 해보면 재미있겠지? 마지막으로 자료의 성격이 문제다. 답변은 전형적인 리커드 척도(Likert scale), 즉 5점 척도다. 흠, 얘네들을 클러스터링 하려면 어떻게 해야 하나? 일단, 양적 자료는 아니니 k-means 같은 표준적이고 손쉬운 방법은 못 쓴다. 설상가상 리커트 척도를 다루는 데는 문외한이고, 이제부터 공부해서 뭔가 만들어낼 성의도 없다. 딱 주말에 심심풀이로 꺼내든 프로젝트라서 주말에 끝내고 싶다! (역시 나에게는 대충과 야매가 어울리지.) 어쨌든 이후의 글에서는 아래의 세 가지 내용을 간단히 다뤄보고자 한다. 
 
   1. IGM 패널 웹 사이트를 긁기 
   2. 자료 정리(munging) 및 클러스터링 알고리듬 적용하기 
