--- a/content/post/2018-01-03-mobile_game_market.Rmd
+++ b/content/post/2018-01-03-mobile_game_market.Rmd
@@ -23,7 +23,7 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 # tl; dr 
 
   1. 무서운 성장세로 보면 모바일 게임이 이제 대세다! 
-  2. 일본 모바일 게임 시장이 아마도 세계 최대의 시장 
+  2. 중국 모바일 게임 시장은 이미 세계 최대!  
   3. 한국 모바일 게임 시장은 매출 분포나 집중도에서 활력을 잃어가고 있을지 모른다. 
   
 # Motivation 
