--- a/content/post/2018-01-03-mobile_game_market.Rmd
+++ b/content/post/2018-01-03-mobile_game_market.Rmd
@@ -41,14 +41,15 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 ```{r message=FALSE, warning=FALSE, echo = FALSE,  paged.print=FALSE}
 tdf %.>% 
   filter(., year == "2017") %.>% 
+  mutate(., revenue = (value / 10^8) %.>% format(., digits = 1, nsmall = 1)) %.>% 
   head(., 15) %.>% 
-  select(., one_of("rank", "app_name", "value", "app_release_date", "parent_company_name", "hq_country")) %.>% 
-  kable(., col.names=c('매출순위', '게임', '매출', '앱 츨시일', '모기업', '모기업 국가'), caption="2017 모바일 게임 매출 순위") 
+  select(., one_of("rank", "app_name", "revenue", "app_release_date", "parent_company_name", "hq_country")) %.>%   kable(., col.names=c('매출순위', '게임', '매출(1억 $)', '앱 츨시일', '모기업', '모기업 국가'), caption="2017 모바일 게임 매출 순위") 
 ```
 
-일단 첫눈에 알 수 있는 내용부터 보자. 이른바 '글로벌' 히트 게임은 착시다. 수퍼셀에서 만든 "크래시로열", "크래시오브클랜" 그리고 한국의 컴투스에서 내놓은 "서머너스워" 같은 히트작이 존재하지만 시장은 뚜렷하게 구분되어 있다. 올 한 해 동안 가장 많은 돈을 번 "왕자영요Honour of Kings"는 중국어권과 한국 등의 동남아 권역에서만 서비스된다.[^honor] 나머지 2017년의 흥행 게임들도 비슷하다. 한국에서 엄청난 흥행을 기록한 "리니지M" 역시 한국, 대만, 홍콩 이외의 지역에서는 아직 서비스되지 않고 있다. "리니지2레볼루션"이 그나마 글로벌 성과를 냈지만, 역시 한국 흥행과 비교할 수준은 아니다. 2위에 오른 "몬스터 스트라이크" 역시 일본에서만 잘되는 게임이다. 2017년에 흥행한 상위 15개 타이틀에서 보듯이, 모바일 게임 시장은 국가별로 혹은 지역별로 상당한 정도로 분절화되어 있다. 플랫폼이 글로벌하다고 해서, 문화적인 차이가 사라지는 것은 아니었다.  
+일단 첫눈에 알 수 있는 내용부터 보자. 이른바 '글로벌' 히트 게임은 착시다. 수퍼셀에서 만든 "크래시로열", "크래시오브클랜" 그리고 한국의 컴투스에서 내놓은 "서머너스워" 같은 히트작이 존재하지만 시장은 뚜렷하게 구분되어 있다. 올 한 해 동안 가장 많은 돈을 번 "왕자영요Honour of Kings"는 중국어권과 한국 등의 동남아 권역에서만 서비스된다.[^honor] 나머지 2017년의 흥행 게임들도 비슷하다. 한국에서 엄청난 흥행을 기록한 "리니지M" 역시 한국, 대만, 홍콩 이외의 지역에서는 아직 서비스되지 않고 있다. "리니지2레볼루션"이 그나마 글로벌 성과를 냈지만, 역시 한국 흥행과 비교할 수준은 아니다. 2위에 오른 "몬스터 스트라이크" 역시 일본에서만 잘되는 게임이다. 2017년에 흥행한 상위 15개 타이틀에서 보듯이, 모바일 게임 시장은 국가별로 혹은 지역별로 상당한 정도로 분절화되어 있다. 플랫폼이 글로벌하다고 해서, 문화적인 차이가 사라지는 것은 아니었다.[^marketdef]  
 
 [^honor]: 한국에서는 "팬타스톰"이라는 이름으로 서비스되고 있으나 중국 같은 대박을 이루지는 못했다.
+[^marketdef]: 사실 아래 분석은 시장에 대해서 다소간의 혼란이 존재한다. 예를 들어 수퍼셀은 핀란드 기업이지만 실제로 주로 매출을 내는 곳은 전세계이다. 이렇듯 다소 혼란의 여지가 있으나, 글로벌로 활동하는 게임의 종류가 많지 않다는 점을 고려해, 다소간의 개념적 혼란을 무릎쓰고 둘을 혼용해서 사용하도록 하겠다. 
 
 시장 전체는 어땠을까? 2017년만 봐서는 알 수 없으니 내친 김에 앱애니 데이터가 모인 2012년부터 살펴보자. 
 
