--- a/content/post/2018-01-03-mobile_game_market.Rmd
+++ b/content/post/2018-01-03-mobile_game_market.Rmd
@@ -34,7 +34,7 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 오늘날 게임 업계의 서부는 단연 "모바일"이다. 올해 기점으로 한국이나 해외나 모바일 게임 시장이 기존의 온라인 게임 및 콘솔 게임 시장과 비슷한 규모로 성장했다. 그다지 좋아하지 않는 삼국지 비유를 들자면, 온라인-콘솔(게임기)-모바일이 천하삼분지계를 이루었다고나 할까? 
 
-모바일 앱 시장의 집계 데이터를 서비스하는 Aㅇㅇ를 통해 2017년 한해 동안 가장 많은 매출을 올린 게임 1,000개를 뽑아냈다. 일단 상위 15개의 게임부터 보자. 미리 말해두면, Aㅇㅇ 서비스의 자료는 실데이터가 아닌 추정치이다. 사실 구글이나 애플과 같은 플랫폼 홀더가 아닌 이상 정확한 데이터를 알 수 없으니, 그나마 신뢰 받는 데이터에 의지할 수 밖에 없다는 점, 널리 양해 바란다.[^out] 이하 제시되는 표나 그림에서 금액의 단위는 모두 미국 달러(USD)다. 
+모바일 앱 시장의 집계 데이터를 서비스하는 Aㅇㅇ를 통해 2017년 한해 동안 가장 많은 매출을 올린 게임 1,000개를 뽑아냈다. 일단 상위 15개의 게임부터 보자. 미리 말해두면, Aㅇㅇ 서비스의 자료는 실데이터가 아닌 추정치이다. 사실 구글이나 애플과 같은 플랫폼 홀더가 아닌 이상 정확한 데이터를 알 수 없으니, 그나마 신뢰 받는 데이터에 의지할 수 밖에 없다는 점, 널리 양해 바란다.[^out] 이하 제시되는 표나 그림에서 금액의 단위는 모두 미국 달러(USD)이며, Aㅇㅇ에서 집계햐는 액수는 플랫폼 수수료 30%를 제외한 금액이란 점을 미리 밝혀둔다.  
 
 [^out]: "나는 Aㅇㅇ 서비스는 못 믿어!," 라고 하는 분들은 여기서 페이지를 닫으시라. 
 
@@ -49,7 +49,7 @@ tdf %.>%
 일단 첫눈에 알 수 있는 내용부터 보자. 이른바 '글로벌' 히트 게임은 착시다. 수퍼셀에서 만든 "크래시로열", "크래시오브클랜" 그리고 한국의 컴투스에서 내놓은 "서머너스워" 같은 히트작이 존재하지만 시장은 뚜렷하게 구분되어 있다. 올 한 해 동안 가장 많은 돈을 번 "왕자영요Honour of Kings"는 중국어권과 한국 등의 동남아 권역에서만 서비스된다.[^honor] 나머지 2017년의 흥행 게임들도 비슷하다. 한국에서 엄청난 흥행을 기록한 "리니지M" 역시 한국, 대만, 홍콩 이외의 지역에서는 아직 서비스되지 않고 있다. "리니지2레볼루션"이 그나마 글로벌 성과를 냈지만, 역시 한국 흥행과 비교할 수준은 아니다. 2위에 오른 "몬스터 스트라이크" 역시 일본에서만 잘되는 게임이다. 2017년에 흥행한 상위 15개 타이틀에서 보듯이, 모바일 게임 시장은 국가별로 혹은 지역별로 상당한 정도로 분절화되어 있다. 플랫폼이 글로벌하다고 해서, 문화적인 차이가 사라지는 것은 아니었다.[^marketdef]  
 
 [^honor]: 한국에서는 "팬타스톰"이라는 이름으로 서비스되고 있으나 중국 같은 대박을 이루지는 못했다.
-[^marketdef]: 사실 아래 분석은 시장에 대해서 다소간의 혼란이 존재한다. 예를 들어 수퍼셀은 핀란드 기업이지만 실제로 주로 매출을 내는 곳은 전세계이다. 이렇듯 다소 혼란의 여지가 있으나, 글로벌로 활동하는 게임의 종류가 많지 않다는 점을 고려해, 다소간의 개념적 혼란을 무릎쓰고 둘을 혼용해서 사용하도록 하겠다. 
+[^marketdef]: 사실 아래 분석은 시장에 대해서 다소간의 혼란이 존재한다. 예를 들어 수퍼셀은 핀란드 기업이지만 실제로 주로 매출을 내는 곳은 전세계이다. 이렇듯 다소 혼란의 여지가 있으나, 글로벌로 활동하는 게임의 종류가 많지 않다는 점을 고려해, 다소간의 개념적 혼란을 무릅쓰고 둘을 혼용해서 사용하도록 하겠다. 
 
 시장 전체는 어땠을까? 2017년만 봐서는 알 수 없으니 내친 김에 앱애니 데이터가 모인 2012년부터 살펴보자. 
 
