--- a/content/post/2018-01-03-mobile_game_market.Rmd
+++ b/content/post/2018-01-03-mobile_game_market.Rmd
@@ -16,6 +16,8 @@ library(DescTools)
 library(ineq)
 library(knitr)
 library(showtext)
+library(here)
+
 load("data/2018-01-03_document.RData") 
 font_add("square", regular = "fonts/NanumSquareR.otf")
 ```
@@ -23,7 +25,7 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 # tl; dr 
 
   1. 무서운 성장세로 보면 모바일 게임이 이제 대세다! 
-  2. 중국 모바일 게임 시장은 이미 세계 최대!  
+  2. 일본 시장이 아직은 짱짱맨! 
   3. 한국 모바일 게임 시장은 매출 분포나 집중도에서 활력을 잃어가고 있을지 모른다. 
   
 # Motivation 
@@ -38,7 +40,7 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 
 [^out]: "나는 Aㅇㅇ 서비스는 못 믿어!," 라고 하는 분들은 여기서 페이지를 닫으시라. 
 
-```{r message=FALSE, warning=FALSE, echo = FALSE,  paged.print=FALSE}
+```{r message=FALSE, warning=FALSE, echo=FALSE,  paged.print=FALSE}
 tdf %.>% 
   filter(., year == "2017") %.>% 
   mutate(., revenue = (value / 10^8) %.>% format(., digits = 1, nsmall = 1)) %.>% 
@@ -67,7 +69,7 @@ p1
 p3
 ```
 
-4년 동안 형성된 시장 총액을 지역별로 표시했다. 모바일은 "Asia First"다. 한중일을 합치면 시장 점유율이 50% 이상이다. "왕자영요", "몽환서유" 같은 엄청난 히트작이 나온 시장 답게 중국이 세계 최대의 모바일 게임 시장으로 자리매김했다. 국가별 매출 변화의 추이는 다음의 그림과 같다. 
+4년 동안 형성된 시장 총액을 지역별로 표시했다. 모바일은 "Asia First"다. 한중일을 합치면 시장 점유율이 50% 이상이다. "왕자영요", "몽환서유" 같은 엄청난 히트작이 나온 중국 시장이지만, 아직은 일본 시장이 더 두텁다. 다만 중국의 빠른 성장율을 고려할 때 2--3년 내에 세계 최대 시장으로 부상하게 될 것이다. 국가별 매출 변화의 추이는 다음의 그림과 같다. 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.height=4, fig.width=8, fig.show='asis', fig.showtext=T,  fig.retina=1}
 #
