MOD_files: Moble Game part I

--- a/content/post/2018-01-03-mobile_game_market.Rmd
+++ b/content/post/2018-01-03-mobile_game_market.Rmd
@@ -8,7 +8,6 @@ categories: ['data', 'market-research']
 
 ```{r include=FALSE}
 library(lubridate)
-library(here)
 library(tidyverse)
 library(wrapr)
 library(reldist) 
@@ -16,14 +15,21 @@ library(DescTools)
 library(ineq)
 library(knitr)
 library(showtext)
+library(here)
+
+# When Blogdown 
 load("data/2018-01-03_document.RData") 
 font_add("square", regular = "fonts/NanumSquareR.otf")
+
+# When inproject document 
+#load(here::here("2017", "document", "data", "2018-01-03_document.RData"))
+#font_add("square", regular = here::here("2017", "document", "fonts", "NanumSquareR.otf"))
 ```
 
 # tl; dr 
 
   1. 무서운 성장세로 보면 모바일 게임이 이제 대세다! 
-  2. 중국 모바일 게임 시장은 이미 세계 최대!  
+  2. 일본 시장이 아직은 짱짱맨! 
   3. 한국 모바일 게임 시장은 매출 분포나 집중도에서 활력을 잃어가고 있을지 모른다. 
   
 # Motivation 
@@ -33,12 +39,14 @@ font_add("square", regular = "fonts/NanumSquareR.otf")
 # Go West!  
 
 오늘날 게임 업계의 서부는 단연 "모바일"이다. 올해 기점으로 한국이나 해외나 모바일 게임 시장이 기존의 온라인 게임 및 콘솔 게임 시장과 비슷한 규모로 성장했다. 그다지 좋아하지 않는 삼국지 비유를 들자면, 온라인-콘솔(게임기)-모바일이 천하삼분지계를 이루었다고나 할까? 
-
-모바일 앱 시장의 집계 데이터를 서비스하는 Aㅇㅇ를 통해 2017년 한해 동안 가장 많은 매출을 올린 게임 1,000개를 뽑아냈다. 일단 상위 15개의 게임부터 보자. 미리 말해두면, Aㅇㅇ 서비스의 자료는 실데이터가 아닌 추정치이다. 사실 구글이나 애플과 같은 플랫폼 홀더가 아닌 이상 정확한 데이터를 알 수 없으니, 그나마 신뢰 받는 데이터에 의지할 수 밖에 없다는 점, 널리 양해 바란다.[^out] 이하 제시되는 표나 그림에서 금액의 단위는 모두 미국 달러(USD)이며, Aㅇㅇ에서 집계햐는 액수는 플랫폼 수수료 30%를 제외한 금액이란 점을 미리 밝혀둔다.  
+  
+  모바일 앱 시장의 집계 데이터를 서비스하는 Aㅇㅇ를 통해 2017년 한해 동안 가장 많은 매출을 올린 게임 1,000개를 뽑아냈다. 일단 상위 15개의 게임부터 보자. 미리 말해두면, Aㅇㅇ 서비스의 자료는 실데이터가 아닌 추정치이다. 사실 구글이나 애플과 같은 플랫폼 홀더가 아닌 이상 정확한 데이터를 알 수 없으니, 그나마 신뢰 받는 데이터에 의지할 수 밖에 없다는 점, 널리 양해 바란다.[^out] 이하 제시되는 표나 그림에서 금액의 단위는 모두 미국 달러(USD)이며, Aㅇㅇ에서 집계햐는 액수는 플랫폼 수수료 30%를 제외한 금액이란 점을 미리 밝혀둔다.  
 
 [^out]: "나는 Aㅇㅇ 서비스는 못 믿어!," 라고 하는 분들은 여기서 페이지를 닫으시라. 
 
-```{r message=FALSE, warning=FALSE, echo = FALSE,  paged.print=FALSE}
+
+
+```{r message=FALSE, warning=FALSE, echo=FALSE,  paged.print=FALSE}
 tdf %.>% 
   filter(., year == "2017") %.>% 
   mutate(., revenue = (value / 10^8) %.>% format(., digits = 1, nsmall = 1)) %.>% 
@@ -67,7 +75,7 @@ p1
 p3
 ```
 
-4년 동안 형성된 시장 총액을 지역별로 표시했다. 모바일은 "Asia First"다. 한중일을 합치면 시장 점유율이 50% 이상이다. "왕자영요", "몽환서유" 같은 엄청난 히트작이 나온 시장 답게 중국이 세계 최대의 모바일 게임 시장으로 자리매김했다. 국가별 매출 변화의 추이는 다음의 그림과 같다. 
+4년 동안 형성된 시장 총액을 지역별로 표시했다. 모바일은 "Asia First"다. 한중일을 합치면 시장 점유율이 50% 이상이다. "왕자영요", "몽환서유" 같은 엄청난 히트작이 나온 중국 시장이지만, 아직은 일본 시장이 더 두텁다. 다만 중국의 빠른 성장율을 고려할 때 2--3년 내에 세계 최대 시장으로 부상하게 될 것이다. 국가별 매출 변화의 추이는 다음의 그림과 같다. 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.height=4, fig.width=8, fig.show='asis', fig.showtext=T,  fig.retina=1}
 #
@@ -81,8 +89,8 @@ p4
 
   1. 게임업계의 매출 불평등의 정도는? 
   2. 게임업계의 산업 집중도는? 
-
-배운게 도둑질이라고 돈버는 데 도움되는 날카로운 통찰보다는 이런게 더 관심이 가더라. 어쩔 수 없다! ㅠㅠ 하지만 어설프게 배운 도둑질인지라서 해당 질문은 철저하게 다 파보진 않겠다. 첫번째 질문은 지니 계수로, 두번째 질문은 히르쉬-허핀달 지수로 소략하게 살펴보자.  
+  
+  배운게 도둑질이라고 돈버는 데 도움되는 날카로운 통찰보다는 이런게 더 관심이 가더라. 어쩔 수 없다! ㅠㅠ 하지만 어설프게 배운 도둑질인지라서 해당 질문은 철저하게 다 파보진 않겠다. 첫번째 질문은 지니 계수로, 두번째 질문은 히르쉬-허핀달 지수로 소략하게 살펴보자.  
 
 지니 계수는 두 가지 자료에 대해 계산해 볼 예정이다. 해당 연도의 총매출의 지니 계수는 기본이다. 그런데 모든 게임이 1월 1일부터 서비스되지는 않을 것이고, 연중 나오는 게임도 있을 것이다. 이런 게임들에게 불이익을 주지 않기 위해서 당해 연도 매출을 당해 연도의 서비스 일수로 나눈 일간평균매출(Average Revenue Per Day: ARPD)라는 조작 지표를 도입할 예정이다. 다만 게임의 경우 초반에 매출이 압도적으로 높게 나오기 때문에 해당 연도에 서비스된 일수가 충분하지 않은 게임들을 제외했다. 대략, 어림잡아서 서비스된 일수가 1년의 1/3 쯤에 해당하는 122일에 미치지 못하는 게임들이 제외 대상이다. 
 
@@ -122,10 +130,10 @@ p8
 
 사실 좀 더 분석해야 하는 내용들이 남아 있다. 몇 가지 적어보자. 
 
-  1. 회사별 분석 
-  2. 출시 후 1년이 지나서도 높은 인기를 누리는 타이틀들 
+1. 회사별 분석: 위의 분석을 보면서 의문을 품은 분들이 있을 것이다. 지니 계수나 H-H 지수는 개별 게임이 아니라, 회사를 기반으로 계산해야 하는 것이 아닐까? 맞다. 다만, 위의 분석은 각국의 시장의 모습을 파악하기 위해서 이루어진 것임을 감안해주시면 좋겠다. 
+2. 출시 후 1년이 지나서도 높은 인기를 누리는 게임: 모바일 게임의 생애주기는 여전히 논란거리다. 과연 여타 장르의 게임에 비해서 모바일 게임의 생애주기가 훨씬 짧을까?  
 
-하지만 귀찮아서 이 정도에서 그만! ㅎ 
+파트1은 귀찮아서 이 정도에서 그만! ㅎ 
 
 
 
