--- a/content/post/2018-01-03-mobile_game_market.Rmd
+++ b/content/post/2018-01-03-mobile_game_market.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Mobile Game Market of Y2017, part I"
+title: "Mobile Game Market of Y2017, part 1"
 author: "Junsok Huhh"
 date: '2018-01-03'
 tags: ['R', 'economics', 'mobile-game', 'gini-coefficient']
