--- a/content/post/us_iOS/blogpost.Rmd
+++ b/content/post/us_iOS/blogpost.Rmd
@@ -29,7 +29,7 @@ dfa_BP %.>% mutate(., install_base = active_users / (open_rate * 0.01)) -> dfa_B
 
   1. 미국 iOS와 AOS(안드로이드) 모바일 게임 마켓 자료로 매출 신장에 기여하는 요인을 들여다보았다. 
   2. 업계의 정설과는 다르게 활성 이용자(active users)의 매출 영향력은 크지 않다. 
-  3. 대개의 패널 기법들이 short panel에 기반하고 있어서 long panel을 들여다보는 데 애로사항이 있더라... (이것은 능력부족) 
+  3. 대개의 패널 기법들이 short panel에 기반하고 있어서 시간축이 좀 되는 녀석들을 다루는 데 애로사항이 있더라... (이거슨 능력부족) 
 
 # Motivation 
 
@@ -60,7 +60,7 @@ dfa_BP %.>%
 
 분석에 동원될 관심 변수의 주요 통계량에 대해서 살펴보자. 변수가 많아 따로 별도의 html 페이지를 만들었다. 예상대로 다른 변수에 비해서 매출(`revenue`), 다운로드(`download`) 등은 분포는 쏠림이 뚜렷하다. 
 
-[LINK](./summary.html)
+[LINK](summary.html)
 
 # Correlation
 
