--- a/content/post/panel_US/blogpost.Rmd
+++ b/content/post/panel_US/blogpost.Rmd
@@ -28,7 +28,7 @@ dfa_BP %.>% mutate(., install_base = active_users / (open_rate * 0.01)) -> dfa_B
 # tl; dr 
 
   1. 미국 iOS와 AOS(안드로이드) 모바일 게임 마켓 자료로 매출 신장에 기여하는 요인을 들여다보았다. 
-  2. 업계의 정설과는 다르게 활성 이용자(active users)의 매출 영향력은 크지 않다. 
+  2. 업계의 정설과는 다르게 활성 이용자(active users) 및 이용 시간 등 게임 내 요소들의 매출 영향력은 크지 않다. 
   3. 대개의 패널 기법들이 short panel에 기반하고 있어서 시간축이 좀 되는 녀석들을 다루는 데 애로사항이 있더라... (이거슨 능력부족) 
 
 # Motivation 
@@ -52,9 +52,9 @@ dfa_BP %.>%
   dplyr::select(., -one_of('n')) 
 ```
 
-위의 표에서 눈치챈 사람도 있겠지만, 좀 더 엄밀한 분석을 위해서 패널 데이터를 구축했고, 1년 52주 단위 데이터를 모두 갖춘 게임들만 걸러냈다. 불균형 패널(unbalanced panel)을 구축해 아쉬운 자료를 늘이는 것도 나쁘지 않다. 하지만 추정 결과에 큰 차이가 없음을 대략적으로 확인하고, 깔끔하고 원활한 추정 작업을 위해 먼저 균형 패널을 분석 대상으로 제한할 것이다. 
+위의 표에서 눈치챈 사람도 있겠지만, 좀 더 엄밀한 분석을 위해서 패널 데이터를 구축했다. 1년 52주 단위 데이터를 모두 갖춘 게임들만 걸러냈다. 불균형 패널(unbalanced panel)을 구축해 아까운 자료를 늘이는 것도 나쁘지 않겠다. 하지만 추정 결과에 큰 차이가 없음을 대략적으로 확인했고, 깔끔하고 원활한 추정 작업을 위해 균형 패널로 분석 대상으로 제한하고자 한다. 
 
-이 패널 데이터의 경우 횡단면(cross section)의 규모는 꽤 애매하다. 대개 전형적인 미시 자료의 경우 1,000 단위를 넘는 횡단면 규모를 지니고 있다. 반면, 시계열의 크기는 연도별로 52개 씩이다. 횡단면이 시게열보다는 길지만 그래도 시게열의 길이가 전형적인 패널 데이터에 비해서 짧지는 않기 때문에 추정 작업에 주의가 요구된다. 
+분석 대상인 패널 데이터의 경우 횡단면(cross section)의 규모는 살짝 애매한 크기다. 대개 전형적인 미시 자료의 경우 1,000 단위를 넘는 횡단면 규모를 지니고 있다. 반면, 시계열의 크기는 연도별로 52개 씩이다. 횡단면이 시게열보다는 길지만 그래도 시게열의 길이가 전형적인 패널 데이터에 비해서 길기 때문에 추정 작업에 주의가 요구된다. 
 
 ### 주요 변수설명 
 
@@ -82,7 +82,7 @@ corrplot(tcorr, method = "number", tl.col="black", type = "upper", tl.srt = 45)
 
 ```
 
-분석에서 종속변수가 될 매출`revenue`과 상관관계가 가장 높은 변수는 순활성사용자`net_AU`다. 순활성사용자와 상관관계가 높은 설치 규모`install_base`는 설명변수에서 제외하는 것이 좋겠다. 평균이용시간`avg_time_per_user`과 평균세션수`avg_sessions_per_user`도 서로 상관성이 높다. 하지만 대체로 크게 문제될 것이 없으므로 이 둘은 모두 독립변수에 넣도록 하겠다.[^session]
+분석에서 종속변수가 될 매출`revenue`과 상관관계가 가장 높은 변수는 순활성사용자`net_AU`다. 순활성사용자와 상관관계가 높은 설치 규모`install_base`는 설명변수에서 제외하는 것이 좋겠다. 평균이용시간`avg_time_per_user`과 평균세션수`avg_sessions_per_user`도 서로 상관성이 높다. 하지만 대체로 크게 문제될 것이 없으므로 이 둘은 모두 독립변수(regressor)에 넣도록 하겠다.[^session]
 
 [^session]: 모바일 게임에서 '세션'의 의미란 게임을 시작한 후 게임 내 이용자의 인터랙션이 비활성화 될 때까지의 시간을 의미한다. 모바일 게에서 세션은 게임 콘텐츠에 의해 정의될 수도 있고, 이용자가 선택할 수도 있다. 이용자의 자발적인 비활성화가 발생하지 않는 이상 콘텐츠에 의해 정의되는 시간이 특정 세션의 상한이 된다. 
 
@@ -100,7 +100,7 @@ corrplot(tcorr, method = "number", tl.col="black", type = "upper", tl.srt = 45)
 [^caution1]: 물론 여기에는 몇가지 가정이 필요하다. 다운로드를 하고 접속을 하지 않는 경우도 있고, 게임 계정을 이미 지니고 있으나 여러가지 이유(기기 교체, 자발적 삭제)로 앱을 지운 후 다시 다운로드 받은 경우가 섞여 있을 수 있다. 일단 문제를 단순하게 만들기 위해서 해당 주에 발생한 다운로드는 신규 이용자라고 간주하도록 하자. 
 
   * `download`: 해당 주에 발생한 다운로드 규모 
-  * `net_AU`: `active_user` - `download`. 즉, 해당 주 활성 이용자에서 다운로드 숫자를 뺀 순 활성 이용자 규모 
+  * `net_AU`: `active_user` $-$ `download`. 즉, 해당 주 활성 이용자에서 다운로드 숫자를 뺀 순 활성 이용자 규모 
 
 ### Duration 
 활성이용자가 '어떻게' 게임을 했는지에 대한 자료도 있다. 아쉽게도 자료는 활성이용자의 게임 이용시간의 평균값만 제공한다. 만일 해당 게임 이용자의 플레이 패턴에 대한 분포가 있다면 좋았을 것이다. 하지만 이가 없으면 잇몸으로 버텨야지. 이용자들의 게임이용 시간의 평균값을 플레이의 지속성을 나타내는 변수로 활용하도록 하자. 
@@ -293,8 +293,8 @@ pmg_vis("us_AOS", "AOS in U.S.")
 
 다소 복잡해보이는 지금까지의 분석이 지닌 함의를 두가지로 요약해보자.
 
-  1. 업계의 속설은 게임 디자인 및 플레이 요소, 즉  게임 내의 보상 등에 좌우되는 순활성이용자 수, 평균 플레이시간, 세션 정보 등이 중요하다는 것이다. 이러한 중요성은 단순 상관관계나 통합 모형을 통해 확인할 수 있다. 그런데 보다 정교한 분석 거친 결과를 보면, 적어도 미국 모바일 게임 시장에 대해서 이러한 정설은 과장되었을 것으로 판단할 수 있다. 
-  2. 가장 안정적으로 매출을 견인하는 요소는 주당 다운로드 규모다. 물론 이 의미를 어떻게 해석해야 하는지에 대해서는 다소 추가적인 분석이 필요하다. 특히 각 변수들을 실행수단으로 볼 때 1%를 올리기 위한 비용이 다를 수 있다는 점에 주목해야 한다. 예를 들어, 1000만 명의 주당 순활성 이용자를 지닌 게임에서 순활성이용자 1%를 늘이기 위해서는 많은 비용을 요할 것이다. 반면, 이 게임에서도 주당 다운로드 숫자는 크지 않을 수 있다. 이 게임이 꽤 지난 게임이라면 오히려 게임 내 요소보다는 게임의 다운로드를 늘이는 외부적인 활동이 중요할 수 있다.
+  1. 업계의 정설은 게임 디자인 및 플레이 요소, 즉  게임 내의 보상 등에 좌우되는 순활성이용자 수, 평균 플레이시간, 세션 정보 등이 중요하다는 것이다. 이 정설은 단순 상관관계나 통합 모형을 통해 확인된다. 그런데 패널 데이터에 특화된 분석 결과를 보면, 적어도 미국 모바일 게임 시장에 대해서 이러한 정설은 다소 과장된 것으로 볼 수 있겠다. 
+  2. 가장 안정적으로 매출을 견인하는 요소는 주당 다운로드 규모다. 물론 결과의 의미를 어떻게 해석해야 하는지에 대해서는 추가적인 분석이 필요하다. 특히 각 변수들을 실행수단으로 볼 때 1%를 올리기 위한 비용이 다를 수 있다는 점에 주의해야 한다. 예를 들어, 1,000만 명의 주당 순활성 이용자를 지닌 게임에서 순활성이용자 1%를 늘이기 위해서는 많은 비용을 요할 것이다. 반면, 활성 이용자가의 규모가 커도 주당 다운로드 숫자는 크지 않을 수 있다. 게임이 꽤 시간이 지난 게임이라면 매출 견인을 위해서는 게임의 다운로드를 늘이는 단순한 외부 활동이 오히려 효과적일 수 있다. 
 
 # Technincal PS
 
