--- a/content/post/panel_US/blogpost.Rmd
+++ b/content/post/panel_US/blogpost.Rmd
@@ -46,12 +46,12 @@ dfa_BP %.>% mutate(., install_base = active_users / (open_rate * 0.01)) -> dfa_B
 데이터는 2015, 2016, 2017년 3개 연도를 대상으로 한다. 일단 미국 iOS, AOS의 데이터를 열심히 모았다. 데이터를 긁는게 좀 짜증이 나긴 했다. 같은 짜증을 한번 더 견디면, 한국의 두 플랫폼에 대해서도 아래와 같은 분석이 가능하다. 먼저 데이터 크기나 패널 데이터로서의 구색은 그리 나쁘지 않다. iOS의 경우에는 2015, 2016, 2017년이 다 있었고, AOS의 경우는 집계상의 어려움이 있었는지 2016, 2017년 자료를 모아 정리할 수 있었다. 자료의 현황은 아래와 같다. 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
-library(pander)
+options(knitr.table.format = "html")
 dfa_BP %.>% 
   count(., cat_platform, year) %.>% 
   mutate(., n_app = n / 52) %.>% 
   dplyr::select(., cat_platform, year, n_app, n) %.>% 
-  kable(., col.names = c("OS", "Year", "# of Apps", "# of Oservation")) 
+  kable(., col.names = c("OS", "Year", "# of Apps", "# of Oservation"))
 ```
 
 위의 표에서 눈치챈 사람도 있겠지만, 좀 더 엄밀한 분석을 위해서 패널 데이터를 구축했다. 1년 52주 단위 데이터를 모두 갖춘 게임들만 걸러냈다. 불균형 패널(unbalanced panel)을 구축해 아까운 자료를 늘이는 것도 나쁘지 않겠다. 하지만 추정 결과에 큰 차이가 없음을 대략적으로 확인했고, 깔끔하고 원활한 추정 작업을 위해 균형 패널로 분석 대상으로 제한하고자 한다. 
